LU-9748 lod: safely access update log stat

'lod_child_got_update_log' and 'ltd_got_update_log' are not accessed
with lock, so there is race to check all got update log, use lod_lock
to serialize setting and checking these flags, as a side effect,
this lock can act as barrier before wakeup.

Add some debug messages, which can help understand long DNE recovery.

Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: Icf65837fe24dbfef35963dcc8502888271334ba5
Reviewed-on: https://review.whamcloud.com/28000
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>